[package]
name = "ciphertools"
version = "0.1.0"
authors = ["Tommy Hudson <thomhuds@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
druid = { version = "0.6.0", features = ["svg"] }
env_logger = "0.7.1"
